Revise README for improved structure and content
Updated README to enhance clarity and organization, added sections on features, supported data structures, algorithms, tech stack, and getting started instructions.