@@ -1,96 +1,286 @@
-🧠💻 VisuAlgorithm
-Interactive Data Structures & Algorithms Visualizer
-<p align="center"> <b>Visualize. Understand. Master DSA.</b><br> Built with ❤️ using Java & JavaFX </p>
-✨ Overview
+<div align="center">
 
-VisuAlgorithm is an interactive desktop application designed to make Data Structures and Algorithms (DSA) intuitive and engaging through real-time visualizations.
+<img src="https://readme-typing-svg.demolab.com?font=Fira+Code&weight=700&size=36&duration=3000&pause=1000&color=6366F1&center=true&vCenter=true&width=600&lines=VisuAlgorithm;Visualize.+Understand.+Master." alt="Typing SVG" />
 
-Built as an academic project using Object-Oriented Programming (OOP) principles, it allows users to:
+<br/>
 
-Construct data structures from scratch
-Interact with them dynamically
-Watch algorithms execute step-by-step with animations
-🚀 Features
-🎮 Interactive Visualizations
-Build graphs node-by-node
-Insert into BSTs dynamically
-Work on a pannable & zoomable canvas
-⏯️ Playback Engine
-▶ Play / ⏸ Pause
-⏭ Step Forward / ⏮ Step Backward
-⚡ Adjustable speed control
-📊 Real-Time State Tracking
-Adjacency List & Matrix updates
-Distance maps (Dijkstra)
-Priority queues & call stacks
-🔄 Undo / Redo System
-Global UndoStack support
-Revert insertions, deletions, and transformations seamlessly
-🎯 Smart UI Feedback
-Color-coded comparisons
-Step-by-step explanations
-Dynamic data panels
-🗂️ Supported Data Structures
-Category	Structures
-📦 Arrays	Fixed, Dynamic
-🔗 Linked Lists	Singly, Doubly, Circular
-📚 Stacks & Queues	LIFO, FIFO
-🌳 Trees	Binary Search Tree (BST)
-🌐 Graphs	Directed, Undirected, Weighted
-⚙️ Algorithms Visualized
-🔢 Sorting Algorithms
-Bubble Sort
-Selection Sort
-Insertion Sort
-Merge Sort
-Quick Sort
-🔍 Searching Algorithms
-Linear Search
-Binary Search
-Ternary Search
-🌳 BST Operations
-Traversals: Inorder, Preorder, Postorder, Level Order
-Queries: Search, Predecessor, Successor
-Mutations: Insert & Delete (all cases handled)
-🌐 Graph Algorithms
-Traversals: BFS, DFS
-Minimum Spanning Tree: Prim’s, Kruskal’s
-Shortest Path: Dijkstra
-DAG: Topological Sort
-🛠️ Tech Stack
-Component	Technology
-💻 Language	Java
-🎨 GUI	JavaFX
-🧩 Architecture	MVC (Model-View-Controller)
-📄 UI Layout	FXML
-📦 Getting Started
-✅ Prerequisites
-Java Development Kit (JDK 17+)
-JavaFX SDK
-⚙️ Installation
+> **An interactive desktop application for visualizing Data Structures & Algorithms — built with Java & JavaFX**
+
+<br/>
+
+![Java](https://img.shields.io/badge/Java-17+-ED8B00?style=for-the-badge&logo=openjdk&logoColor=white)
+![JavaFX](https://img.shields.io/badge/JavaFX-GUI-4A90D9?style=for-the-badge&logo=java&logoColor=white)
+![Architecture](https://img.shields.io/badge/Architecture-MVC-6366F1?style=for-the-badge)
+![License](https://img.shields.io/badge/License-Academic-10B981?style=for-the-badge)
+![Status](https://img.shields.io/badge/Status-Active-22C55E?style=for-the-badge)
+
+<br/>
+
+```
+██╗   ██╗██╗███████╗██╗   ██╗ █████╗ ██╗      ██████╗  ██████╗ ██████╗ ██╗████████╗██╗  ██╗███╗   ███╗
+██║   ██║██║██╔════╝██║   ██║██╔══██╗██║     ██╔════╝ ██╔═══██╗██╔══██╗██║╚══██╔══╝██║  ██║████╗ ████║
+██║   ██║██║███████╗██║   ██║███████║██║     ██║  ███╗██║   ██║██████╔╝██║   ██║   ███████║██╔████╔██║
+╚██╗ ██╔╝██║╚════██║██║   ██║██╔══██║██║     ██║   ██║██║   ██║██╔══██╗██║   ██║   ██╔══██║██║╚██╔╝██║
+ ╚████╔╝ ██║███████║╚██████╔╝██║  ██║███████╗╚██████╔╝╚██████╔╝██║  ██║██║   ██║   ██║  ██║██║ ╚═╝ ██║
+  ╚═══╝  ╚═╝╚══════╝ ╚═════╝ ╚═╝  ╚═╝╚══════╝ ╚═════╝  ╚═════╝ ╚═╝  ╚═╝╚═╝   ╚═╝   ╚═╝  ╚═╝╚═╝     ╚═╝
+```
+
+</div>
+
+---
+
+## 📌 Table of Contents
+
+- [Overview](#-overview)
+- [Features](#-features)
+- [Data Structures](#️-supported-data-structures)
+- [Algorithms](#-algorithms-visualized)
+- [Tech Stack](#️-tech-stack)
+- [Getting Started](#-getting-started)
+- [Team](#-team)
+- [License](#-license)
+
+---
+
+## 🧠 Overview
+
+**VisuAlgorithm** transforms the way you learn Data Structures and Algorithms. Instead of staring at pseudocode, watch your algorithms **think** in real time — step by step, node by node, frame by frame.
+
+Built as a full-featured academic project using solid **Object-Oriented Programming** principles, VisuAlgorithm lets you:
+
+- 🏗️ &nbsp; **Construct** data structures from scratch interactively
+- 🎮 &nbsp; **Interact** with them dynamically through a live canvas
+- 🎬 &nbsp; **Watch** algorithms execute step-by-step with smooth animations
+
+---
+
+## ✨ Features
+
+<table>
+<tr>
+<td width="50%">
+
+### 🎮 Interactive Visualizations
+- Build graphs **node-by-node** on a live canvas
+- Insert into **BSTs dynamically** and watch them rebalance
+- **Pan & zoom** anywhere on the canvas for full control
+
+</td>
+<td width="50%">
+
+### ⏯️ Playback Engine
+- ▶️ **Play** / ⏸️ **Pause** at any moment
+- ⏭️ **Step Forward** / ⏮️ **Step Backward**
+- ⚡ **Adjustable speed** — from slow-mo to lightning fast
+
+</td>
+</tr>
+<tr>
+<td width="50%">
+
+### 📊 Real-Time State Tracking
+- Live **Adjacency List & Matrix** updates
+- **Distance maps** for Dijkstra
+- **Priority queues & call stacks** visualized in sync
+
+</td>
+<td width="50%">
+
+### 🔄 Undo / Redo System
+- Global **UndoStack** support
+- Revert **insertions, deletions & transformations** seamlessly
+- Full history navigation
+
+</td>
+</tr>
+<tr>
+<td width="50%">
+
+### 🎯 Smart UI Feedback
+- **Color-coded** comparisons and state highlights
+- **Step-by-step explanations** in plain language
+- **Dynamic data panels** update as you go
+
+</td>
+<td width="50%">
+
+### 🖼️ Visual Canvas
+- Fully **pannable & zoomable** workspace
+- Smooth **animations** between algorithm states
+- Clean, intuitive **node/edge rendering**
+
+</td>
+</tr>
+</table>
+
+---
+
+## 🗂️ Supported Data Structures
+
+| Category | Structures |
+|:---:|:---|
+| 📦 **Arrays** | Fixed Array, Dynamic Array |
+| 🔗 **Linked Lists** | Singly Linked, Doubly Linked, Circular |
+| 📚 **Stacks & Queues** | LIFO Stack, FIFO Queue |
+| 🌳 **Trees** | Binary Search Tree (BST) |
+| 🌐 **Graphs** | Directed, Undirected, Weighted |
+
+---
+
+## ⚙️ Algorithms Visualized
+
+<details open>
+<summary><b>🔢 Sorting Algorithms</b></summary>
+
+| Algorithm | Time Complexity | Space Complexity |
+|:---|:---:|:---:|
+| Bubble Sort | O(n²) | O(1) |
+| Selection Sort | O(n²) | O(1) |
+| Insertion Sort | O(n²) | O(1) |
+| Merge Sort | O(n log n) | O(n) |
+| Quick Sort | O(n log n) avg | O(log n) |
+
+</details>
+
+<details open>
+<summary><b>🔍 Searching Algorithms</b></summary>
+
+| Algorithm | Time Complexity | Works On |
+|:---|:---:|:---:|
+| Linear Search | O(n) | Any array |
+| Binary Search | O(log n) | Sorted array |
+| Ternary Search | O(log₃ n) | Sorted array |
+
+</details>
+
+<details open>
+<summary><b>🌳 BST Operations</b></summary>
+
+- **Traversals** — Inorder · Preorder · Postorder · Level Order
+- **Queries** — Search · Predecessor · Successor
+- **Mutations** — Insert & Delete (all edge cases handled)
+
+</details>
+
+<details open>
+<summary><b>🌐 Graph Algorithms</b></summary>
+
+| Category | Algorithms |
+|:---|:---|
+| **Traversal** | BFS (Breadth-First Search), DFS (Depth-First Search) |
+| **Min Spanning Tree** | Prim's Algorithm, Kruskal's Algorithm |
+| **Shortest Path** | Dijkstra's Algorithm |
+| **DAG** | Topological Sort |
+
+</details>
+
+---
+
+## 🛠️ Tech Stack
+
+```
+┌─────────────────────────────────────────────────────────┐
+│                     VisuAlgorithm                       │
+├──────────────┬──────────────┬──────────────────────────┤
+│   Language   │     GUI      │      Architecture        │
+│    Java 17+  │   JavaFX     │   MVC + FXML Layouts     │
+└──────────────┴──────────────┴──────────────────────────┘
+```
+
+| Component | Technology | Purpose |
+|:---|:---:|:---|
+| 💻 Language | `Java 17+` | Core logic & OOP design |
+| 🎨 GUI Framework | `JavaFX` | Rendering & animations |
+| 🧩 Architecture | `MVC` | Separation of concerns |
+| 📄 UI Layout | `FXML` | Declarative UI definitions |
+
+---
+
+## 📦 Getting Started
+
+### ✅ Prerequisites
+
+Make sure you have the following installed:
+
+```bash
+✔ Java Development Kit (JDK 17+)
+✔ JavaFX SDK
+✔ IntelliJ IDEA / Eclipse / VS Code
+```
+
+### ⚙️ Installation
+
+**1. Clone the repository**
+```bash
 git clone https://github.com/your-username/VisuAlgorithm.git
-Open the project in IntelliJ / Eclipse / VS Code
-Configure JavaFX SDK
-Run:
-Launcher.java
+cd VisuAlgorithm
+```
 
-or
+**2. Open in your IDE**
+```
+IntelliJ IDEA  →  File > Open > Select project folder
+Eclipse        →  File > Import > Existing Project
+VS Code        →  Open folder, install Java Extension Pack
+```
 
-HelloApplication.java
-📸 Preview (Optional Section)
+**3. Configure JavaFX SDK**
+```
+Add JavaFX libraries to your module path / classpath
+Set VM options:  --module-path /path/to/javafx-sdk/lib --add-modules javafx.controls,javafx.fxml
+```
 
-(Add screenshots or GIFs here to make it even more attractive)
+**4. Run the application**
+```bash
+# Entry points:
+src/main/java/Launcher.java
+# or
+src/main/java/HelloApplication.java
+```
 
-👥 Team
+---
 
-This project was developed as part of an OOP course project by a team of CSE undergraduates:
+## 📸 Preview
 
-👤 Your Name — Md. Takvir Hossain Tur
-👤 Team Member - Abu Sayem Mohammed Tanvir
+> 🖼️ *Screenshots and demo GIFs coming soon — feel free to contribute!*
 
-📜 License
-This project is for academic and educational purposes.
+---
 
-💡 Final Note
+## 👥 Team
 
-“Algorithms are not just logic — they are stories unfolding step by step.”
+<div align="center">
+
+| 👤 | Name | Role |
+|:---:|:---|:---:|
+| 🧑‍💻 | **Md. Takvir Hossain Tur** | Developer |
+| 🧑‍💻 | **Abu Sayem Mohammed Tanvir** | Developer |
+
+*Developed as part of a CSE Object-Oriented Programming course project.*
+
+</div>
+
+---
+
+## 📜 License
+
+```
+This project is created for academic and educational purposes.
+Feel free to learn from it — just don't submit it as your own!
+```
+
+---
+
+<div align="center">
+
+### ⭐ If you found this useful, star the repo!
+
+<br/>
+
+*"Algorithms are not just logic — they are stories unfolding step by step."*
+
+<br/>
+
+![Made with Java](https://img.shields.io/badge/Made%20with-Java-ED8B00?style=flat-square&logo=openjdk)
+![Built with Love](https://img.shields.io/badge/Built%20with-%E2%9D%A4%EF%B8%8F-red?style=flat-square)
+![CSE Project](https://img.shields.io/badge/CSE-OOP%20Project-6366F1?style=flat-square)
+
+</div>
